# WhiteBoard

./: main.py  pyproject.toml
backend/: db.sqlite3
backend/backend/: asgi.py  settings.py
backend/whiteboard/: admin.py  consumers.py  models.py  routing.py  tasks.py
backend/whiteboard/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Whiteboard.jsx
frontend/src/components/: CurrWhiteBoard.jsx  NavBar.jsx  WhiteBoard.jsx  WhiteBoardPage.jsx
