[project]
name = "gptwhiteboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "redis>=6.2.0",
]
